--- a/Amazing Website/primary.html
+++ b/Amazing Website/primary.html
@@ -80,10 +80,11 @@
                 else {
                     x.style.display = "none";
                 }
-
             }
 
-
+            function clickin() {
+                document.getElementById("Nope").src = "CLIIICK MEEEE OOOOOOOOOON"
+            }
         </script>
 
 
