--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <img src="https://github.com/Nem3sisAlpha/XavierBriandWebServers/blob/main/Images%20Lab%201/VAX05085.jpg?raw=true" width="800" height="1200"/>
         <h2>You must be judged by the judging bird before entering this website</h2>
 
-        <form action="form.php" method="get">
+        <form action="form.php" method="post">
             You may enter your name here <input type="text" id="name" name="name" required> </br></br>
             You may enter your birthdate here (DD/MM/YYYY) <input type="text" pattern="\d{2}/\d{2}/\d{4}"> </br></br>
             Do you like photography? <input type="checkbox" name="Yes"> Yes <input type="checkbox" name="No"> No </br></br>
