--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <form action="form.php" method="post">
             You may enter your name here <input type="text" id="name" name="name" required> </br></br>
+            You also may enter your email address here <input type="text" id="email" name="name" required> </br></br>
             You may enter your birthdate here (DD/MM/YYYY) <input type="text" pattern="\d{2}/\d{2}/\d{4}"> </br></br>
             Do you like photography? <input type="checkbox" name="Yes"> Yes <input type="checkbox" name="No"> No </br></br>
             If yes, what equipment do you use? 
