--- a/primary.html
+++ b/primary.html
@@ -56,6 +56,9 @@
         <h5>For more images, click on this link!</h5>
         <a href="secondary.html">Next Page</a>  
 
+        <h5>To see the crazy amount of pictures I can take in a month, click this link!</h5>
+        <a href="datatable.php">Schedule</a>  
+
         <p>There's not much here, so here's an amazing link for you!</p>
 
         <a href="#amazing link">Teleport to the amazing link!</a>
